# nova-renderer

./: CMakeLists.txt
include/nova_renderer/: nova_renderer.hpp  render_engine.hpp  shaderpack_data.hpp  window.hpp
include/nova_renderer/util/: attributes.hpp  result.hpp  utils.hpp
src/: nova_renderer.cpp
src/loading/: folder_accessor.cpp  folder_accessor.hpp  json_utils.hpp  regular_folder_accessor.cpp  regular_folder_accessor.hpp  zip_folder_accessor.cpp  zip_folder_accessor.hpp
src/loading/shaderpack/: json_interop.cpp  render_graph_builder.cpp  render_graph_builder.hpp  shaderpack_data.cpp  shaderpack_loading.cpp  shaderpack_loading.hpp
src/render_engine/dx12/: dx12_render_engine.cpp  win32_window.cpp
src/render_engine/vulkan/: cached_buffer.hpp  compacting_block_allocator.hpp  swapchain.hpp  vulkan_render_engine.hpp  vulkan_render_engine_init.cpp  vulkan_render_engine_shaderpack.cpp  x11_window.cpp  x11_window.hpp
src/tasks/: task_scheduler.hpp  wait_free_queue.hpp
src/util/: result.cpp  utils.cpp
swig/: CMakeLists.txt  nova_renderer.i.in
tests/: CMakeLists.txt
tests/unit_tests/loading/: filesystem_test.cpp
